--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cobe": "^0.6.5",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.24.0",
     "next": "16.1.1",
